# OS_Project_3

./: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  dining_philosopher.c  out  out.cbp  output.out.cbp  safecode.c
