cmake_minimum_required(VERSION 3.5)
project(out C)
include_directories(/usr/include/)
link_directories(/usr/include/)
set(SOURCE_FILES dining_philosopher.c)
set(CMAKE_C_STANDARD 11)
set( CMAKE_BUILD_TYPE cmake-build-debug)
find_package( Threads REQUIRED )
add_executable(out ${SOURCE_FILES})
target_link_libraries(out pthread)
